# ImageIdentifier

./: CMakeLists.txt  README.md  index.html  params.json
ImageIdentifier/: fileBMP.hpp  fileFactory.cpp  fileFactory.hpp  fileJPG.hpp  imageFile.h  main.cpp
ImageIdentifier.xcodeproj/: project.pbxproj
ImageIdentifier.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ImageIdentifier.xcodeproj/xcuserdata/Bogdan.xcuserdatad/xcschemes/: ImageIdentifier.xcscheme  xcschememanagement.plist
